整理依赖关系